:lipstick::bug: [Sections] Overflow images

--- a/src/styles/pages/sections/_introduction.scss
+++ b/src/styles/pages/sections/_introduction.scss
@@ -14,6 +14,10 @@
     animation: appearing-up 1.3s 0s ease;
   }
 
+  &__imageContainer{
+    overflow: hidden;
+  }
+
   &__image{
     max-height: 46%;
     max-width: 150%;
