--- a/src/styles/tools/_base.scss
+++ b/src/styles/tools/_base.scss
@@ -3,3 +3,7 @@ html, body {
     height: 100%;
     background: $black-solid;
 }
+
+body {
+  overflow-x: hidden;
+}
